--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/utils": "^6.0.5",
     "@tabler/icons-react": "^2.12.0",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mantine-datatable": "^2.2.9",
